{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 71,
  "lineage": "9a48013b-2ca5-d8ce-5870-85be7c2b30b5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dbt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "8081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-29T11:09:03.102-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dtc-bandcamp-ff/global/firewalls/dbt",
            "log_config": [],
            "name": "dbt",
            "network": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/networks/default",
            "priority": 1000,
            "project": "dtc-bandcamp-ff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/firewalls/dbt",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "metabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-29T11:09:03.032-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dtc-bandcamp-ff/global/firewalls/metabase",
            "log_config": [],
            "name": "metabase",
            "network": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/networks/default",
            "priority": 1000,
            "project": "dtc-bandcamp-ff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/firewalls/metabase",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "prefect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4200"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-29T11:09:03.062-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dtc-bandcamp-ff/global/firewalls/prefect",
            "log_config": [],
            "name": "prefect",
            "network": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/networks/default",
            "priority": 1000,
            "project": "dtc-bandcamp-ff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/firewalls/prefect",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230125",
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/zones/europe-west6-a/disks/bandcamp-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dtc-bandcamp-ff/zones/europe-west6-a/instances/bandcamp-instance",
            "instance_id": "3558637959874427018",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "fedrpi:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDFP+1zw6eLTDBYLn1Gkf9P/bXNvaUlhyEEMW9GgKin8s3F5eiR7f7me3TAXse6Fb3LisrHK9EYloAbWGk1vEj1VLqvnWcERunAbG0q9bOZp45g7VD0ot6Nwt7wrl74/7tWq+lSbrk29ES/fOKw266nGmSO7ELXfvwwav4rIt0mmXXBr7lwPnWi45L2Ed+Dx4+vU/1qHeEIr/XIciajBuKyUUmt3E7jOxh+CjhoQpvM0S8b0V6KOrI2ndwtAPJ8G+Df4Cc2DmVaKWvWg7KuhsoRLiZKP+XSgaHwmO9m9PYptvEvlspgnUg9LeFkm8T/YSpVHdVPBs5IY95w+oqtEiXl fedrpi\n"
            },
            "metadata_fingerprint": "FT4SchjtNIA=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y docker.io python3 git curl\ncurl -L \"https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n",
            "name": "bandcamp-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.65.65.19",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/global/networks/default",
                "network_ip": "10.172.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/regions/europe-west6/subnetworks/default",
                "subnetwork_project": "dtc-bandcamp-ff"
              }
            ],
            "project": "dtc-bandcamp-ff",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dtc-bandcamp-ff/zones/europe-west6-a/instances/bandcamp-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west6-a"
          },
          "dependencies": [
            "google_project_service.compute_engine"
          ]
        }
      ]
    }
  ]
}